# pgmuvi

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  paper.bib  paper.md  pgmuvi_tutorial.ipynb  pgmuvi_tutorial_2d.ipynb  pgmuvi_tutorial_mcmc.ipynb  pyproject.toml  setup.py  tox.ini
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: paper-draft-tex-and-pdf.yml  paper-draft.yml  pre-commit.yml  publish-package-pypi.yml  ruff.yml  test.yml
docs/: BGLS_integration_notes.md  BGLS_method_explained.md  bgls_references.bib  methods_section_draft.tex  period_summary_from_gp.md
docs/source/: api.rst  background.rst  concepts.rst  conf.py  faq.rst  glossary.rst  index.rst  pgmuvi.constraints.rst  pgmuvi.gps.rst  pgmuvi.initialization.rst  pgmuvi.kernels.rst  pgmuvi.lightcurve.rst  pgmuvi.multiband_ls_significance.rst  pgmuvi.preprocess.rst  pgmuvi.priors.rst  pgmuvi.synthetic.rst  pgmuvi.trainers.rst  requirements.txt
docs/source/howto/: index.rst  interpreting_results.rst  loading_data.rst  model_selection.rst  multiband.rst  preprocessing.rst  priors_constraints.rst
docs/source/notebooks/: 2d_test.ipynb  PGMUVI_Gaussian_Process_fitting.ipynb  PGMUVI_Lightcurve.ipynb  PGMUVI_Lomb_Scargle.ipynb  PGMUVI_comparison_with_other_codes.ipynb  pgmuvi_tutorial.ipynb  pgmuvi_tutorial_2d.ipynb  pgmuvi_tutorial_mcmc.ipynb  tutorial_model_selection.ipynb  tutorial_preprocessing.ipynb  tutorial_synthetic.ipynb
examples/: 2d_multiwavelength_example.py  alternative_kernels_1d.py  dust_mean_spectral_mixture_2d.py  model_selection.py  multiband_fap_demo.py  separable_kernels_2d.py
lightcurves/: tescope_filters.json
paper/: paper.bib  paper.md
pgmuvi/: AlfOriAAVSO_Vband.csv  NESS_LC_PGMUVI.py  __init__.py  bgls.py  constraints.py  gps.py  initialization.py  kernels.py  lightcurve.py  models.py  multiband_ls_significance.py  priors.py  synthetic.py  test_script.py  trainers.py
pgmuvi/preprocess/: __init__.py  quality.py  variability.py
pgmuvi/utils/: helpers.py
pgmuvi/viz/: __init__.py  gif.py
tests/: test_2d_constraints.py  test_2d_integration.py  test_alternative_models_integration.py  test_band_attribute.py  test_best_band_init.py  test_bgls_smoke.py  test_constraint_sets.py  test_drop_bands.py  test_fit_ls_return_full.py  test_get_methods.py  test_initialization.py  test_kernels.py  test_merge_concat.py  test_mls_init.py  test_models_alternative.py  test_peak_ranking_physical.py  test_period_priors.py  test_period_summary.py  test_period_summary_backends.py  test_period_summary_peaks.py  test_sampling_quality.py  test_select_bands.py  test_subsampling.py  test_synthetic.py  test_time_units.py  test_variability.py  tests.py
