[tool.ruff]
select = ["A",  # prevent using keywords that clobber python builtins
          "B",  # bugbear: security warnings
          "E",  # pycodestyle
          "F",  # pyflakes
          "ISC",  # implicit string concatenation
          "UP",  # alert you when better syntax is available in your python version
          "RUF",  # the ruff developer's own rules
          "W",  # pycodestyle warnings

          ]
# ignore = ["E501", "W503"]
exclude = ["tests"]

# include notbooks!
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39']
include = '\.pyi?$'

[tool.pytest]
# TBD


[coverage:run]
branch = True
source = ruff
omit = tests/*

[project]
name = pgmuvi
description = "A python package for astronomical timeseries with GPs"
license = GPLv3
requires-python = ">=3.8"
