[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pgmuvi"
# version = "0.0.1"
dynamic = ["version"]
authors = [
    {name = "Peter Scicluna", email = "peter.scicluna@eso.org"},
    {name = "Kathryn Jones", email = "kathryn.jones@unibe.ch"},
    {name = "Stefan Waterval", email = "sw4445@nyu.edu"},
    {name = "Sundar Srinivasan", email = "s.srinivasan@irya.unam.mx"},
    {name = "Diego Alejandro Vasquez-Torres", email = "d.vasquez@irya.unam.mx"}, 
    {name = "Sara Jamal", email = "jamal@mpia.de"},
]
license = {text = "GPL"}
description = "A python package to interpret multiwavelength astronomical timeseries with GPs"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8, !=3.9.13"
dependencies = [
    "numpy",
    "matplotlib",
    "seaborn",
    "torch",
    "gpytorch",
    "pyro-ppl",
    "arviz",
    "xarray",
    "tqdm",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/icsm/pgmuvi"
"Bug Tracker" = "https://github.com/icsm/pgmuvi/issues"

[tool.setuptools]
packages = ["pgmuvi"]
include-package-data = false

[tool.setuptools_scm]

[tool.ruff]
select = ["A",  # prevent using keywords that clobber python builtins
          "B",  # bugbear: security warnings
          "E",  # pycodestyle
          "F",  # pyflakes
          "ISC",  # implicit string concatenation
          "UP",  # alert you when better syntax is available in your python version
          "RUF",  # the ruff developer's own rules
          "W",  # pycodestyle warnings

          ]
ignore = ["UP004", "B007"]  # ["E501", "W503"]
exclude = ["tests"]

# include notebooks!
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39']
include = '\.pyi?$'

# [tool.pytest]
# TBD

